force-app/main/default/objects/Sales_Tax_Rate__c/Sales_Tax_Rate__c.object-meta.xml
<CustomObject>
    <label>Sales Tax Rate</label>
    <nameField>
        <displayFormat>Sales Tax Rate-{0}</displayFormat>
        <label>Sales Tax Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>