force-app/main/default/objects/Sales_Tax_Rate__c/fields/City_Sales_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>City_Sales_Tax_Rate__c</fullName>
    <label>City Sales Tax Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>