force-app/main/default/objects/Sales_Tax_Rate__c/fields/City_Type__c.field-meta.xml
<CustomField>
    <fullName>City_Type__c</fullName>
    <label>City Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>