force-app/main/default/objects/Sales_Tax_Rate__c/fields/Combined_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Combined_Tax_Rate__c</fullName>
    <formula>State_Sales_Tax_Rate__c + County_Sales_Tax_Rate__c + City_Sales_Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>