force-app/main/default/objects/Sales_Tax_Rate__c/fields/Franchise_Fees__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Fees__c</fullName>
    <label>Franchise Fees</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>