force-app/main/default/objects/Sales_Tax_Rate__c/fields/Main_Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Division_Name__c</fullName>
    <label>Main Division Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>