force-app/main/default/objects/Sales_Tax_Rate__c/fields/Main_Division_Type__c.field-meta.xml
<CustomField>
    <fullName>Main_Division_Type__c</fullName>
    <label>Main Division Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>