force-app/main/default/objects/Sales_Tax_Rate__c/fields/State_Sales_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>State_Sales_Tax_Rate__c</fullName>
    <label>State Sales Tax Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>