force-app/main/default/objects/Sales_Tax_Rate__c/fields/Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Subdivision__c</fullName>
    <label>Sub Division Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COUNTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>