force-app/main/default/objects/Sales_Tax_Rate__c/fields/Subdivision_Name__c.field-meta.xml
<CustomField>
    <fullName>Subdivision_Name__c</fullName>
    <label>Sub Division Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>