force-app/main/default/objects/Sales_Tax_Rate__c/fields/Tax_Area_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_Area_ID__c</fullName>
    <label>Tax Area ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>